# IArabicSpeech

./: .gitignore  BINARY_DISTRIBUTION.md  BUNDLING_CTRANSLATE2.md  CLAUDE.md  Package.swift  README.md
Documentation/: CTRANSLATE2.md  EXAMPLES.md
Frameworks/CTranslate2.xcframework/ios-arm64/CTranslate2.framework/: CTranslate2
Sources/IArabicSpeech/: IArabicSpeech.swift  IArabicSpeechRecognizer.swift
Sources/faster_whisper/: IArabicSpeechBridge.cpp  audio.cpp  feature_extractor.cpp  tokenizer.cpp  transcribe.cpp  utils.cpp
Sources/faster_whisper/headers/: tokenizer.h  transcribe.h
Sources/faster_whisper/include/: IArabicSpeech-Bridging.h  module.modulemap  tokenizer.h  transcribe.h
Sources/faster_whisper/whisper/: whisper_audio.cpp  whisper_audio.h  whisper_tokenizer.cpp
Tests/: README.md
Tests/Cpp/: CMakeCache.txt  CMakeLists.txt  audio_tests.cpp  audio_tests.sh  feature_extractor_tests.cpp  feature_extractor_tests.sh  fix_cleanup.sh  mock_ctranslate2.cpp  run_all_tests.sh  run_tests.sh  test_setup.sh  test_whisper.cpp  test_whisper.sh  transcribe_tests.cpp  transcribe_tests.sh  utils_tests.cpp  utils_tests.sh  whisper_audio_tests.cpp  whisper_audio_tests.sh  whisper_model_caller.cpp  whisper_tokenizer_tests.cpp  whisper_tokenizer_tests.sh
Tests/Cpp/cmak_lists/: audio_tests.cmak  feature_extractor_tests.cmak  test_whisper.cmake  transcribe_tests.cmak  utils_tests.cmak  whisper_audio_tests.cmak  whisper_tokenizer_tests.cmak
Tests/IArabicSpeechTests/: IArabicSpeechTests.swift
